--- a/FinalProject/Views/Blogs/Detail.cshtml
+++ b/FinalProject/Views/Blogs/Detail.cshtml
@@ -1,21 +1,23 @@
-﻿<!-- Blog Single Post-->
+﻿@model BlogViewModel
+
+<!-- Blog Single Post-->
 <main class="rn-blog-single">
     <article>
         <!-- Single Post Header-->
-        <header style='background-image: url(../images/blog-single.jpg);'>
-            <h1 class="rn-single-post-title">A standard blog post with image</h1>
+        <header style="background-image: url(/images/@Model.Blog.Photo);">
+            <h1 class="rn-single-post-title">@Model.Blog.Title</h1>
             <div class="rn-single-post-meta">
                 <span>
                     In
-                    <a href="#">News</a>
+                    <a href="#">@Model.Blog.Category.Name</a>
                 </span>
                 <span>
                     By
-                    <a href="#">John Doe</a>
+                    <a href="#">@Model.Blog.Author.Name</a>
                 </span>
                 <span>
                     At
-                    <a href="#">15 May, 2018</a>
+                    <a href="#">@Model.Blog.CreatedAt.ToString("dd MMMM, yyyy")</a>
                 </span>
             </div>
         </header>
@@ -24,16 +26,13 @@
                 <div class="col-lg-12">
                     <!-- Single Post Content-->
                     <div class="rn-single-post-content">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in tortor sed eros consequat rutrum eget iaculis lacus. Aenean ac sapien risus. Nullam eget lobortis odio. Nulla ac lacus in nunc sagittis pretium ut ac nulla. In mollis hendrerit metus, eu posuere dolor hendrerit vel. Duis sit amet tortor imperdiet nisl aliquam scelerisque. Suspendisse lobortis condimentum fermentum. In volutpat est libero, a facilisis ipsum pharetra eu. Fusce condimentum metus id ante auctor pellentesque. Donec placerat ornare risus ut sodales. In accumsan risus nec sodales ultrices. Vestibulum auctor auctor sodales. Donec varius volutpat tellus dapibus fringilla.</p>
-                        <p>Duis id leo gravida, convallis lorem ac, tincidunt tortor. Fusce in mollis eros, ac tempor purus. Nulla facilisi. Nam dictum neque quis felis iaculis, ut condimentum ex feugiat. Sed tincidunt velit sem, non elementum nibh dapibus eget. Cras at sagittis tellus. Donec vitae ullamcorper mi. Donec in ornare lacus. Cras elementum mi eget vestibulum pulvinar. Sed accumsan vel lorem ut ultricies.</p>
+                        <p>@Model.Blog.TopText</p>
                         <p>
                             <a href="#">
                                 <img class="img-fluid mb-30" src="~/images/big-banner.png" alt="banner" srcset="~/images/big-banner.png 1x, ~/images/big-banner@2x.png 2x">
                             </a>
                         </p>
-                        <p>Aliquam non sodales felis. Fusce luctus porta tincidunt. Etiam aliquet varius est vestibulum consectetur. Donec arcu justo, fringilla sit amet nisi eu, hendrerit facilisis justo. Donec nisl risus, tincidunt at augue eget, ultrices varius orci. Fusce hendrerit lacus in volutpat malesuada. Vestibulum mattis tellus at purus pretium ullamcorper. In hac habitasse platea dictumst.</p>
-                        <p>Integer consectetur condimentum dolor eu consequat. Suspendisse dictum, tellus id semper pretium, velit lorem iaculis felis, sit amet ullamcorper mauris nisl at urna. Proin vel nibh ligula. Integer id ipsum quis eros sodales consectetur vel elementum urna. Morbi facilisis interdum nunc eu commodo. Maecenas magna tellus, dictum at dolor non, rutrum lacinia tellus. Integer accumsan velit est, ac bibendum ante fringilla sit amet.</p>
-                        <p>Mauris faucibus pellentesque elementum. Proin in convallis erat. Maecenas tincidunt cursus euismod. Maecenas quis felis diam. Suspendisse imperdiet tellus eget nunc fringilla fermentum. Fusce nisl neque, lobortis sed turpis ac, faucibus mattis nibh. Vivamus posuere dolor in euismod maximus. Donec velit nisi, rutrum iaculis libero sollicitudin, aliquam congue arcu.</p>
+                        <p>@Model.Blog.Text</p>
                     </div>
                 </div>
             </div>
@@ -44,11 +43,12 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="rn-single-post-tags tagcloud">
-                            <a href="#" rel="tag">rooms</a>
-                            <a href="#" rel="tag">video</a>
-                            <a href="#" rel="tag">image</a>
-                            <a href="#" rel="tag">images</a>
-                            <a href="#" rel="tag">cars</a>
+                            @foreach (var item in Model.Tags)
+                            {
+                                <a href="#" rel="tag">@item.Name</a>
+
+                            }
+
                         </div>
                     </div>
                 </div>
@@ -90,13 +90,13 @@
                             <button>
                                 <i class="fas fa-heart"></i>
                             </button>
-                            <span>1k</span>
+                            <span>@Model.Blog.Likes</span>
                         </li>
                         <li>
                             <button>
                                 <i class="far fa-eye"></i>
                             </button>
-                            <span>50k</span>
+                            <span>@Model.Blog.Visited</span>
                         </li>
                     </ul>
                 </div>
@@ -113,7 +113,7 @@
                 <div class="rn-post-navs-wrap">
                     <div class="rn-post-navs">
                         <div class="rn-post-prev">
-                            <a href="#">
+                            <a asp-action="Detail" asp-controller="Blogs" asp-route-id="@(Model.Blog.Id - 1)">
                                 <div class="rn-nav-post-thumb">
                                     <img src="~/images/blog-item-xs-1.jpg" alt="Previous Post" srcset="~/images/blog-item-xs-1.jpg 1x, ~/images/blog-item-xs-1@2x.jpg 2x">
                                 </div>
@@ -124,13 +124,14 @@
                             </a>
                         </div>
                         <div class="rn-post-next">
-                            <a href="#">
+                            <a asp-action="Detail" asp-controller="Blogs" asp-route-id="@(Model.Blog.Id + 1)">
+                                @{Blog blog = Model.Blogs.FirstOrDefault(b => b.Id == (Model.Blog.Id - 1)); }
                                 <span class="rn-nav-post-info">
                                     <span>Next Post</span>
-                                    <span class="rn-nav-post-title">A standard blog post with image</span>
+                                    <span class="rn-nav-post-title">@(blog == null?"" : blog.Title)</span>
                                 </span>
                                 <span class="rn-nav-post-thumb">
-                                    <img src="~/images/blog-item-xs-2.jpg" alt="Next Post" srcset="~/images/blog-item-xs-2.jpg 1x, ~/images/blog-item-xs-2@2x.jpg 2x">
+                                    <img width="80" height="80" src="~/images/@(blog == null? "" : blog.Photo)" alt="Next Post" srcset="~/images/blog-item-xs-2.jpg 1x, ~/images/blog-item-xs-2@2x.jpg 2x">
                                 </span>
                             </a>
                         </div>
@@ -272,111 +273,69 @@
 
                     <!-- Comments-->
                     <div class="rn-comment-list">
-                        <h2 class="rn-simple-title">4 Comments</h2>
+                        <h2 class="rn-simple-title">@Model.Blog.BlogComments.Count Comments</h2>
                         <ul>
-                            <li>
 
-                                <!-- Comment Item-->
-                                <div class="rn-comment-item">
-                                    <div class="rn-comment-thumb">
-                                        <img class="img-fluid" src="~/images/author-1.jpg" alt="John Doe" srcset="~/images/author-1.jpg 1x, ~/images/author-1@2x.jpg 2x" />
-                                    </div>
-                                    <div class="rn-comment-info">
-                                        <a class="rn-comment-reply" href="#">
-                                            <i class="fas fa-reply"></i> Replay
-                                        </a>
-                                        <div class="rn-comment-meta">
-                                            <div class="rn-comment-name">Barbara Miller</div>
-                                            <div class="rn-comment-time">May 13, 2018 at 8:21 PM</div>
+                            @foreach (var item in Model.Blog.BlogComments)
+                            {
+                                <li>
+                                    <!-- Comment Item-->
+                                    <div class="rn-comment-item">
+                                        <div class="rn-comment-thumb">
+                                            <img class="img-fluid" src="~/images/@item.Author.Photo" alt="@item.Author.Name" srcset="~/images/author-1.jpg 1x, ~/images/author-1@2x.jpg 2x" />
                                         </div>
-                                        <div class="rn-comment-body">
-                                            <p>Mauris lobortis sapien non tellus maximus volutpat. Nam aliquet quis erat et luctus. Sed dignissim id felis vitae fringilla. Maecenas faucibus enim eu mattis iaculis. In ultrices laoreet diam ac tempus.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!-- End Comment Item-->
-
-                                <ul>
-                                    <li>
-
-                                        <!-- Comment Item-->
-                                        <div class="rn-comment-item">
-                                            <div class="rn-comment-thumb">
-                                                <img class="img-fluid" src="~/images/author-2.jpg" alt="John Doe" srcset="~/images/author-2.jpg 1x, ~/images/author-2@2x.jpg 2x" />
+                                        <div class="rn-comment-info">
+                                            <a class="rn-comment-reply" href="#">
+                                                <i class="fas fa-reply"></i> Replay
+                                            </a>
+                                            <div class="rn-comment-meta">
+                                                <div class="rn-comment-name">@item.Author.Name</div>
+                                                <div class="rn-comment-time">@item.CreatedAt.ToString("MMMM dd , yyyy at HH:mm")</div>
                                             </div>
-                                            <div class="rn-comment-info">
-                                                <a class="rn-comment-reply" href="#">
-                                                    <i class="fas fa-reply"></i> Replay
-                                                </a>
-                                                <div class="rn-comment-meta">
-                                                    <div class="rn-comment-name">Joe Shaw</div>
-                                                    <div class="rn-comment-time">May 13, 2018 at 8:21 PM</div>
-                                                </div>
-                                                <div class="rn-comment-body">
-                                                    <p>Etiam vulputate massa urna, laoreet finibus eros tristique nec. Suspendisse rhoncus fermentum odio, et ultricies diam malesuada a.</p>
-                                                </div>
+                                            <div class="rn-comment-body">
+                                                <p>@item.Text</p>
                                             </div>
                                         </div>
-                                        <!-- End Comment Item-->
-
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-
-                                <!-- Comment Item-->
-                                <div class="rn-comment-item">
-                                    <div class="rn-comment-thumb">
-                                        <img class="img-fluid" src="~/images/author-3.jpg" alt="John Doe" srcset="~/images/author-3.jpg 1x, ~/images/author-3@2x.jpg 2x" />
                                     </div>
-                                    <div class="rn-comment-info">
-                                        <a class="rn-comment-reply" href="#">
-                                            <i class="fas fa-reply"></i> Replay
-                                        </a>
-                                        <div class="rn-comment-meta">
-                                            <div class="rn-comment-name">Kimberly Jenkins</div>
-                                            <div class="rn-comment-time">May 13, 2018 at 8:21 PM</div>
-                                        </div>
-                                        <div class="rn-comment-body">
-                                            <p>Mauris lacinia quam a nisl porttitor, quis vehicula nibh tristique. Vivamus ultrices nibh id luctus consequat. Praesent venenatis ipsum vel velit gravida, sit amet mattis ligula lacinia.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!-- End Comment Item-->
+                                    <!-- End Comment Item-->
+                                </li>
+                            }
 
-                            </li>
+
+
+                            
                         </ul>
-                        <div class="text-center">
-                            <a class="btn btn-lg btn-outline-light" href="#">Load More</a>
+                            <div class="text-center">
+                                <a class="btn btn-lg btn-outline-light" href="#">Load More</a>
+                            </div>
                         </div>
-                    </div>
-                    <!-- End Comments-->
-                    <!-- Comment Form-->
-                    <div class="rn-comment-form">
-                        <h2 class="rn-simple-title">Leave a comment</h2>
-                        <form action="https://demo.kitthemes.com/html/rentnow/post">
-                            <div class="row">
-                                <div class="col-lg-4">
-                                    <input type="text" placeholder="Name">
+                        <!-- End Comments-->
+                        <!-- Comment Form-->
+                        <div class="rn-comment-form">
+                            <h2 class="rn-simple-title">Leave a comment</h2>
+                            <form action="https://demo.kitthemes.com/html/rentnow/post">
+                                <div class="row">
+                                    <div class="col-lg-4">
+                                        <input type="text" placeholder="Name">
+                                    </div>
+                                    <div class="col-lg-4">
+                                        <input type="email" placeholder="Email">
+                                    </div>
+                                    <div class="col-lg-4">
+                                        <input type="url" placeholder="Website">
+                                    </div>
                                 </div>
-                                <div class="col-lg-4">
-                                    <input type="email" placeholder="Email">
+                                <textarea cols="30" rows="10" placeholder="Write your comment"></textarea>
+                                <div class="text-right">
+                                    <input class="btn btn-main btn-lg btn-shadow" type="submit" value="Submit">
                                 </div>
-                                <div class="col-lg-4">
-                                    <input type="url" placeholder="Website">
-                                </div>
-                            </div>
-                            <textarea cols="30" rows="10" placeholder="Write your comment"></textarea>
-                            <div class="text-right">
-                                <input class="btn btn-main btn-lg btn-shadow" type="submit" value="Submit">
-                            </div>
-                        </form>
-                    </div>
-                    <!-- End Comment Form-->
+                            </form>
+                        </div>
+                        <!-- End Comment Form-->
 
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<!-- End Comments & Comment Form-->
+    <!-- End Comments & Comment Form-->
